# raw-pixels

./: .gitignore  README.md  code4health2.cabal  notes.md  raw-pixels.cabal  site_key.txt  users.json
snaplets/heist/: _application.tpl  _application_centered.tpl  _application_full.tpl  _base.tpl  _cg.tpl  _login.tpl  _nav.tpl  _navbar.tpl  _tabs.tpl  config.tpl  index.tpl  instagram.tpl  lifeline.tpl  nutrition.tpl
snaplets/heist/admin/: _sidebar.tpl  index.tpl
snaplets/heist/admin/tenants/: _commentary.tpl  _form.tpl  edit.tpl  index.tpl  new.tpl  show.tpl
snaplets/heist/admin/users/: _form.tpl  edit.tpl  index.tpl  new.tpl  show.tpl
snaplets/heist/config/: _sidebar.tpl
snaplets/heist/lifeline/: _sidebar.tpl
snaplets/heist/menu/: _sidebar.tpl
snaplets/heist/nutrition/: _sidebar.tpl  cheeseburger.tpl  salad.tpl
snaplets/heist/profile/: _sidebar.tpl  changePassword.tpl  edit.tpl  show.tpl
snaplets/heist/sessions/: new.tpl
snaplets/heist/templates/: base.tpl  config.tpl  d3demo.tpl  index.tpl  instagram.tpl  lifeline.tpl  nfdemo.tpl
snaplets/heist/templates/instagram/: _nav_side.tpl  acehotel.tpl  breakfast.tpl  dinner.tpl  lunch.tpl  mcdonalds.tpl  nybrgrco.tpl  shakeshack.tpl  sweetgreen.tpl
snaplets/heist/templates/nutrition/: cheeseburger.tpl  salad.tpl
src/: Site.hs
src/App/: Combo.hs
src/Web/: Admin.hs  AppInit.hs  Application.hs  Main.hs  Routes.hs  Sessions.hs
src/Web/App/: Common.hs  Forms.hs  Profiles.hs  Tenants.hs  Users.hs
static/: screen.css  up-data.csv
static/css/: nutrition.css  screen.css
static/js/: config.js  config_highcharts_demo.js  custom.js  custom2.js  home_d3.js  instafeed.min.js  up.js
